<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"

    android:focusable="true"
    android:focusableInTouchMode="true"

    tools:context=".Edicion">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"

        android:focusable="true"
        android:focusableInTouchMode="true"

        tools:context=".Edicion">

        <Button
            android:id="@+id/AddMed"
            android:layout_width="162dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:enabled="false"
            android:text="@string/add_med"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/simpleTimePicker" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="162dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:enabled="false"
            android:text="@string/save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/simpleTimePicker" />

        <Button
            android:id="@+id/Delete"
            android:layout_width="117dp"
            android:layout_height="51dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="264dp"
            android:enabled="false"
            android:text="Button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/MedsList" />

        <EditText
            android:id="@+id/InputMed"
            android:layout_width="356dp"
            android:layout_height="40dp"
            android:layout_below="@id/AddMed"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="28dp"
            android:autofillHints=" "
            android:ems="10"
            android:hint="@string/med_name"
            android:inputType="textPersonName"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

        <EditText
            android:id="@+id/InputTimeDay"
            android:layout_width="356dp"
            android:layout_height="40dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="28dp"
            android:ems="10"
            android:hint="@string/med_num"
            android:inputType="number"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/InputMed" />

        <EditText
            android:id="@+id/InputMedsTime"
            android:layout_width="356dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="28dp"
            android:ems="10"
            android:hint="@string/med_time"
            android:inputType="numberDecimal"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/InputTimeDay" />

        <EditText
            android:id="@+id/InputMedsNum"
            android:layout_width="356dp"
            android:layout_height="40dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="12dp"
            android:ems="10"
            android:hint="@string/capsules"
            android:inputType="number"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/InputTimeDay"
            app:layout_constraintEnd_toEndOf="parent" />

        <ListView
            android:id="@+id/MedsList"
            android:layout_width="394dp"
            android:layout_height="284dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/save_button" />

        <TimePicker
            android:id="@+id/simpleTimePicker"
            android:layout_width="360dp"
            android:layout_height="231dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="24dp"
            android:timePickerMode="spinner"
            app:layout_constraintEnd_toEndOf="@+id/barrier"
            app:layout_constraintTop_toBottomOf="@+id/InputMedsTime" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="left" />

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>